--- a/blocks/element/__like/_active/element__like_active.css
+++ b/blocks/element/__like/_active/element__like_active.css
@@ -1,6 +1,3 @@
 .element__like_active {
-  background-image: url(../../../../image/Union.jpg);
-  background-repeat: no-repeat;
-  margin-right: 0px;
-  margin-left: auto;
+  background-image: url(../../../../image/Union.svg);
 }
