--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,4 @@
-.poput {
+.popup {
   top: 0;
   bottom: 0;
   right: 0;
@@ -6,12 +6,7 @@
   z-index: 1;
   display: none;
   justify-content: center;
-  padding-top: 195px;
+  align-items: center;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.5);
-}
-@media (max-width: 700px) {
-  .poput{
-  padding-top: 123px;
-  }
 }
