--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -6,7 +6,7 @@
   background-color: white;
   margin-right: 0px;
   margin-left: auto;
-  background-image: url(../../../image/Vector.jpg);
+  background-image: url(../../../image/_like.svg);
   cursor: pointer;
   margin-bottom: 4px;
   margin-top: auto;
