--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,16 +1,16 @@
 .form__input {
   border: none;
   width: 358px;
-  height: 14px;
   margin-left: 36px;
   margin-right: 36px;
-  margin-bottom: 8px;
+  padding-bottom: 8px;
   outline: none;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
   overflow: hidden;
+  border-bottom: 1px solid #000000;
 }
 @media (max-width: 700px) {
   .form__input {
@@ -18,4 +18,7 @@
     margin-left: 22px;
     margin-right: 22px;
   }
+}
+.form__input:not(:last-of-type) {
+  margin-bottom: 30px;
 }
