--- a/blocks/form/__save-button/form__save-button.css
+++ b/blocks/form/__save-button/form__save-button.css
@@ -1,5 +1,5 @@
 .form__save-button {
-  margin-top: 48px;
+  margin-top: 44px;
   width: 358px;
   height: 50px;
   background-color: black;
@@ -14,6 +14,7 @@
   font-size: 18px;
   line-height: 22px;
   text-align: center;
+  border-radius: 2px;
 }
 @media (max-width: 700px) {
   .form__save-button {
@@ -22,9 +23,11 @@
     margin-bottom: 25px;
     width: 238px;
     height: 46px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
 .form__save-button:hover {
   transition: 1s ease-out;
-  opacity: 0.5;
+  opacity: 0.8;
 }
