--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,9 @@
 .header {
   max-width: 880px;
   margin: 45px auto 0;
-  height: 74px;
+  opacity: 0.7;
+  border-bottom: 1px solid #545454;
+  width: 100%;
 }
 @media (max-width: 700px) {
   .header {
