--- a/blocks/info/info.css
+++ b/blocks/info/info.css
@@ -1,4 +1,3 @@
-
 .info {
   padding-left: 30px;
   display: grid;
@@ -7,14 +6,13 @@
   row-gap: 7px;
   color: #ffffff;
   align-items: flex-end;
-  height: 73px;
   padding-top: 22px;
   padding-bottom: 25px;
 }
 @media (max-width: 700px) {
   .info {
+    padding-top: 26px;
     margin: 0 auto;
     padding-bottom: 0px;
-    max-height: 62px;
   }
 }
