--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -10,7 +10,7 @@
   font-size: 14px;
   line-height: 17px;
   overflow: hidden;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 @media (max-width: 700px) {
   .form__input {
