--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,11 @@
 .header {
   max-width: 880px;
   margin: 45px auto 0;
-  opacity: 0.7;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   width: 100%;
 }
 @media (max-width: 700px) {
   .header {
     margin-top: 28px;
-    height: 56px;
   }
 }
