--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,6 +2,10 @@
   max-width: 880px;
   margin: 67px auto 0;
   padding-bottom: 60px;
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
 }
 @media (max-width: 907px) {
   .footer {
