--- a/blocks/info/info.css
+++ b/blocks/info/info.css
@@ -8,6 +8,7 @@
   align-items: flex-end;
   padding-top: 22px;
   padding-bottom: 21px;
+  max-width: 572px;
 }
 @media (max-width: 700px) {
   .info {
