--- a/blocks/photos/photos.css
+++ b/blocks/photos/photos.css
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 0px;
   display: grid;
-  grid-template-columns: repeat(3, auto);
+  grid-template-columns: 282px 282px 282px;
   column-gap: 17px;
   row-gap: 20px;
   max-width: 880px;
@@ -10,13 +10,13 @@
 }
 @media (max-width: 950px) {
   .photos {
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: 282px 282px;
     max-width: 584px;
   }
 }
 @media (max-width: 700px) {
   .photos {
-    grid-template-columns: repeat(1, auto);
+    grid-template-columns: 282px ;
     width: 282px;
     margin: 36px auto 0;
   }
