--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,9 +4,12 @@
   right: 0;
   left: 0;
   z-index: 1;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 1s, opacity 0.5s linear;
   justify-content: center;
   align-items: center;
   position: fixed;
+  display: flex;
   background-color: rgba(0, 0, 0, 0.5);
 }
