--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,7 @@
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/element/__container/element__container.css);
+@import url(../blocks/element/__delete-button/element__delete-button.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/info/info.css);
@@ -21,15 +22,18 @@
 @import url(../blocks/profile/__button/profile__button.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
-@import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__title/form__title.css);
 @import url(../blocks/form/__save-button/form__save-button.css);
 @import url(../blocks/form/__container/form__container.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__close/form__close.css);
-
-
+@import url(../blocks/html/html.css);
+@import url(../blocks/popup/__close/popup__img-close.css);
+@import url(../blocks/popup/__img/popup__img.css);
+@import url(../blocks/popup/__title/popup__img-title.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__container/_img/popup__container_img\ .css);
 
 
 
