--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,4 +1,4 @@
-.popup__img-close {
+.popup__close {
   border: none;
   top: -40px;
   right: -40px;
@@ -6,21 +6,21 @@
   height: 32px;
   width: 32px;
   padding: 0px;
-  background-color: inherit;
+  background-color:initial;
   z-index: 2;
   cursor: pointer;
   background-image: url(../../../image/Close.svg);
   background-repeat: no-repeat;
 }
 @media (max-width: 700px) {
-  .popup__img-close  {
+  .popup__close  {
     right: 0px;
     height: 20px;
     width: 20px;
     background-size: 20px 20px;
   }
 }
-.popup__img-close :hover {
+.popup__close:hover {
   transition: 1s ease-out;
   opacity: 0.6;
 }
