--- a/pages/index.css
+++ b/pages/index.css
@@ -33,8 +33,7 @@
 @import url(../blocks/popup/__title/popup__img-title.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__container/_img/popup__container_img.css);
-
-
+@import url(../blocks/popup/_img/popup_img.css);
 
 
 
