--- a/src/blocks/element/__mask-group/element__mask-group.css
+++ b/src/blocks/element/__mask-group/element__mask-group.css
@@ -4,3 +4,7 @@
   background-repeat: no-repeat;
   border-radius: 10px 10px 0px 0px;
 }
+.element__mask-group:hover {
+  transition: 1s ease-out;
+  opacity: 0.8;
+}
