--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -34,6 +34,7 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__container/_img/popup__container_img.css);
 @import url(../blocks/popup/_img/popup_img.css);
-
-
-
+@import url(../blocks/form/__input/_error/form__input_error.css);
+@import url(../blocks/error/error.css);
+@import url(../blocks/form/__input-container/form__input-container.css);
+@import url(../blocks/form/__save-button/_disabled/form__save-button_disabled.css);
